<resources>
    <string name="app_name">Learning Japanese Application</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="app_slogan">Japanese Is Easy</string>
    <string name="app_heading">Japanese</string>
    <string name="sign_up">Sign Up</string>
    <string name="recognize">Recognize</string>
    <string name="clear">Clear</string>
    <string name="about_us">About Us</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="otp_description_text">Code is sent to your phone: </string>
    <string name="otp_code_text">Code OTP</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="enter_email">Enter Email</string>reset_method
    <string name="forget_password_detail">Provide your account\'s username to reset your password</string>
    <string name="reset_method">Choose Reset Method</string>
    <string name="mail_address" translatable="false">abcd@gmail.com</string>
    <string name="using_sms">Using SMS Method</string>
    <string name="sms_number" translatable="false">+84 999 999 999</string>
    <string name="new_credentials">new credentials</string>
    <string name="password_updated">Thank you!</string>
    <string name="new_credentials_detail">Verified successfully \nSet you new password</string>
    <string name="reset_method_detail">Select kind of method you want to reset your password</string>
    <string name="handwriting">Handwriting\n Training</string>
    <string name="practice">Practice \nFor exams</string>
    <string name="kanamoji">Kanamoji</string>
    <string name="study_dekiru">Study Dekiru</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="japanese_1">Japanese 1</string>
    <string name="japanese_2">Japanese 2</string>
    <string name="japanese_3">Japanese 3</string>
    <string name="do_exams">Do exams</string>
    <string name="verify_code">Verify code</string>
    <string name="english">English</string>
    <string name="japanese">日本</string>
    <string name="vietnamese">Tiếng Việt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>