<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".Common.LoginSignup.StartUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:src="@mipmap/ic_launcher_foreground"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_36ssp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_slogan"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_36ssp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <Button
                android:id="@+id/btn_startup_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="2"
                android:onClick="callLoginActivity"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login">

            </Button>

            <Button
                android:id="@+id/btn_startup_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:onClick="callSignupActivity"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:transitionName="transition_signup">

            </Button>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_us"
            android:textColor="@color/black">

        </Button>
    </LinearLayout>

</ScrollView>